metadata/force-app/main/default/objects/CustomName_lmuul__c/CustomName_lmuul__c.object-meta.xml
<CustomObject>
    <description>Description_SdavF</description>
    <label>CustomLabel_CNfbg</label>
    <nameField>
        <label>CustomLabel_CNfbg</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_CNfbgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>