metadata/force-app/main/default/objects/CustomName_lmuul__c/fields/CustomField_DICRs__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DICRs__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldPvdQq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>