metadata/force-app/main/default/objects/CustomName_lmuul__c/fields/CustomField_pjjiF__c.field-meta.xml
<CustomField>
    <fullName>CustomField_pjjiF__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldyerbz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>